logistics-wizard/service-controller.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: lw-controller
  namespace: default
  labels:
    knative.dev/type: "app"
spec:
  runLatest:
    configuration:
      build:
        serviceAccountName: lw-build-bot
        source:
          git:
            url: https://github.com/IBM-Cloud/logistics-wizard-controller.git
            revision: dev
        template:
          name: kaniko
          arguments:
          - name: IMAGE
            value: ${REGISTRY}/${NAMESPACE}/lw-controller:latest
      revisionTemplate:
        spec:
          container:
            image: ${REGISTRY}/${NAMESPACE}/lw-controller:latest 
            imagePullPolicy: Always
            env:
              - name: ERP_SERVICE
                value: http://lw-erp.default.svc.cluster.local
