logistics-wizard/ingress.yaml
# redirect iks ingress to knative ingress
# HTTP only
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lw-knative-ingress
  namespace: istio-system
  annotations:
    # give 30s to services to start from "cold start"
    ingress.bluemix.net/upstream-fail-timeout: "serviceName=knative-ingressgateway fail-timeout=30"
    ingress.bluemix.net/upstream-max-fails: "serviceName=knative-ingressgateway max-fails=0"
spec:
  rules:
    - host: lw-erp.default.$INGRESS_DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: knative-ingressgateway
              servicePort: 80
    - host: lw-controller.default.$INGRESS_DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: knative-ingressgateway
              servicePort: 80
    - host: lw-webui.default.$INGRESS_DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: knative-ingressgateway
              servicePort: 80
